# openarm_ros_controller

./: .gitmodules
.devcontainer/: Dockerfile  devcontainer.json
install/: local_setup.sh  setup.sh
install/cartesian_control_msgs/share/cartesian_control_msgs/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/openarm/share/openarm/: package.sh
install/openarm_bimanual_moveit_config/share/openarm_bimanual_moveit_config/: local_setup.sh  package.sh
install/openarm_bringup/share/openarm_bringup/: package.sh
install/openarm_cartesian_control/include/openarm_cartesian_control/: cartesian_impedance.hpp  openarm_cartesian_controller.hpp
install/openarm_cartesian_control/share/openarm_cartesian_control/: local_setup.dsv  openarm_cartesian_control_plugins.xml  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/openarm_description/share/openarm_description/: package.sh
install/openarm_hardware/include/openarm_hardware/: openarm_simple_hardware.hpp
install/openarm_hardware/share/openarm_hardware/: package.sh
install/openarm_impedance/include/openarm_impedance_control/: impedance.hpp  openarm_impedance_controller.hpp
install/rosbag_recorder/share/rosbag_recorder/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
rosbag_recorder/: setup.py
rosbag_recorder/rosbag_recorder/: recorder_node.py
scripts/: openarm_bringup.sh
tests/: cube_latency_test.py  latency_test.py  measure_effort_noise.py
(+88 files in other folders)
