<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>rosbag_recorder</name>
  <version>0.0.1</version>
  <description>Service-driven rosbag recorder for all active topics.</description>
  <maintainer email="ericjgoossen@gmail.com">Eric</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>rosbag2_py</depend>
  <depend>std_srvs</depend>
  <depend>rosidl_runtime_py</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
